--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,4 +1,9 @@
 -------------------------------------------------------------------------------
+  Version 0.1.2 (2017-10-08)
+-------------------------------------------------------------------------------
+  * Added fr locale
+
+-------------------------------------------------------------------------------
   Version 0.1.1 (2017-09-03)
 -------------------------------------------------------------------------------
   * Added it locale
