--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,4 +1,9 @@
 -------------------------------------------------------------------------------
+  Version 0.1.3 (2017-11-05)
+-------------------------------------------------------------------------------
+  * Added es locale
+
+-------------------------------------------------------------------------------
   Version 0.1.2 (2017-10-08)
 -------------------------------------------------------------------------------
   * Added fr locale
