--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,4 +1,9 @@
 -------------------------------------------------------------------------------
+  Version 0.1.4 (2018-02-18)
+-------------------------------------------------------------------------------
+  * Added pt_BR locale
+
+-------------------------------------------------------------------------------
   Version 0.1.3 (2017-11-05)
 -------------------------------------------------------------------------------
   * Added es locale
