--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,4 +1,9 @@
 -------------------------------------------------------------------------------
+  Version 0.1.5 (2018-04-14)
+-------------------------------------------------------------------------------
+  * Added pt_PT locale
+
+-------------------------------------------------------------------------------
   Version 0.1.4 (2018-02-18)
 -------------------------------------------------------------------------------
   * Added pt_BR locale
