--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,4 +1,9 @@
 -------------------------------------------------------------------------------
+  Version 0.1.6 (2018-06-13)
+-------------------------------------------------------------------------------
+  * Added sparky server checks
+
+-------------------------------------------------------------------------------
   Version 0.1.5 (2018-04-14)
 -------------------------------------------------------------------------------
   * Added pt_PT locale
