--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,4 +1,10 @@
 -------------------------------------------------------------------------------
+  Version 0.1.7 (2018-07-19)
+-------------------------------------------------------------------------------
+  * Added Indonesian locale
+  * Removed pop-up if no connection 
+
+-------------------------------------------------------------------------------
   Version 0.1.6 (2018-06-13)
 -------------------------------------------------------------------------------
   * Added sparky server checks
