--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,4 +1,9 @@
 -------------------------------------------------------------------------------
+  Version 0.1.9 (2018-11-02)
+-------------------------------------------------------------------------------
+  * User password is required to run sparky-aptus-upgrade
+
+-------------------------------------------------------------------------------
   Version 0.1.7 (2018-07-19)
 -------------------------------------------------------------------------------
   * Added Indonesian locale
