--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,4 +1,9 @@
 -------------------------------------------------------------------------------
+  Version 0.1.10 (2018-11-03)
+-------------------------------------------------------------------------------
+  * Added cron config of upgrade
+
+-------------------------------------------------------------------------------
   Version 0.1.9 (2018-11-02)
 -------------------------------------------------------------------------------
   * User password is required to run sparky-aptus-upgrade
