--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,4 +1,9 @@
 -------------------------------------------------------------------------------
+  Version 0.1.10.2 (2018-11-05)
+-------------------------------------------------------------------------------
+  * Updated pt_BR locale 
+
+-------------------------------------------------------------------------------
   Version 0.1.10.1 (2018-11-03)
 -------------------------------------------------------------------------------
   * Updated locale files
