--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,4 +1,10 @@
 -------------------------------------------------------------------------------
+  Version 0.1.11 (2019-05-20)
+-------------------------------------------------------------------------------
+  * Updated pl & pt_BR locales
+  * Small fixes
+
+-------------------------------------------------------------------------------
   Version 0.1.10.2 (2018-11-05)
 -------------------------------------------------------------------------------
   * Updated pt_BR locale 
