--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,4 +1,10 @@
 -------------------------------------------------------------------------------
+  Version 0.1.12 (2019-09-03)
+-------------------------------------------------------------------------------
+  * Added cron opt: 1 week, 1 day
+  * Enable and disable update checking at startup
+
+-------------------------------------------------------------------------------
   Version 0.1.11 (2019-05-20)
 -------------------------------------------------------------------------------
   * Updated pl & pt_BR locales
