--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,7 +1,14 @@
 -------------------------------------------------------------------------------
+  Version 0.1.13 (2019-09-08)
+-------------------------------------------------------------------------------
+  * Clean up the code
+  * Updated pt_BR locale
+  * Moved the autostart to config dir; added postinst & prerm scripts
+
+-------------------------------------------------------------------------------
   Version 0.1.12 (2019-09-03)
 -------------------------------------------------------------------------------
-  * Added cron opt: 1 week, 1 day
+  * Added cron opt 1 week, 1 day
   * Enable and disable update checking at startup
 
 -------------------------------------------------------------------------------
