--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,4 +1,9 @@
 -------------------------------------------------------------------------------
+  Version 0.1.14 (2019-09-18)
+-------------------------------------------------------------------------------
+  * Added German and Hungarian locale
+
+-------------------------------------------------------------------------------
   Version 0.1.13 (2019-09-08)
 -------------------------------------------------------------------------------
   * Clean up the code
