--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,4 +1,10 @@
 -------------------------------------------------------------------------------
+  Version 0.1.15 (2019-11-16)
+-------------------------------------------------------------------------------
+  * Added Greek and Japaneses locales
+  * Updated Italian locale
+
+-------------------------------------------------------------------------------
   Version 0.1.14 (2019-09-18)
 -------------------------------------------------------------------------------
   * Added German and Hungarian locale
