--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,4 +1,9 @@
 -------------------------------------------------------------------------------
+  Version 0.1.16 (2020-04-12)
+-------------------------------------------------------------------------------
+  * Added remsu alongside to ktsuss
+
+-------------------------------------------------------------------------------
   Version 0.1.15 (2019-11-16)
 -------------------------------------------------------------------------------
   * Added Greek and Japaneses locales
