--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,4 +1,9 @@
 -------------------------------------------------------------------------------
+  Version 0.1.17 (2020-04-13)
+-------------------------------------------------------------------------------
+  * Changed remsu to spsu
+
+-------------------------------------------------------------------------------
   Version 0.1.16 (2020-04-12)
 -------------------------------------------------------------------------------
   * Added remsu alongside to ktsuss
