--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,4 +1,9 @@
 -------------------------------------------------------------------------------
+  Version 0.1.18 (2020-04-14)
+-------------------------------------------------------------------------------
+  * Small changes
+
+-------------------------------------------------------------------------------
   Version 0.1.17 (2020-04-13)
 -------------------------------------------------------------------------------
   * Changed remsu to spsu
