--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,4 +1,9 @@
 -------------------------------------------------------------------------------
+  Version 0.1.20 (2020-04-15)
+-------------------------------------------------------------------------------
+  * Small fix
+
+-------------------------------------------------------------------------------
   Version 0.1.19 (2020-04-14)
 -------------------------------------------------------------------------------
   * Reverted ktsuss to older version so spsu is the default now
