--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,4 +1,9 @@
 -------------------------------------------------------------------------------
+  Version 0.1.21 (2020-10-06)
+-------------------------------------------------------------------------------
+  * Updated locale checking
+
+-------------------------------------------------------------------------------
   Version 0.1.20 (2020-04-15)
 -------------------------------------------------------------------------------
   * Small fix
