--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,4 +1,9 @@
 -------------------------------------------------------------------------------
+  Version 0.1.22 (2020-11-15)
+-------------------------------------------------------------------------------
+  * Added zh_CN locale
+
+-------------------------------------------------------------------------------
   Version 0.1.21 (2020-10-06)
 -------------------------------------------------------------------------------
   * Updated locale checking
