--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,4 +1,9 @@
 -------------------------------------------------------------------------------
+  Version 0.1.23 (2021-02-12)
+-------------------------------------------------------------------------------
+  * Updated zh_CN locale
+  
+-------------------------------------------------------------------------------
   Version 0.1.22 (2020-11-15)
 -------------------------------------------------------------------------------
   * Added zh_CN locale
