--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,4 +1,9 @@
 -------------------------------------------------------------------------------
+  Version 0.1.24 (2021-03-13)
+-------------------------------------------------------------------------------
+  * Changed live system detecting
+
+-------------------------------------------------------------------------------
   Version 0.1.23 (2021-02-12)
 -------------------------------------------------------------------------------
   * Updated zh_CN locale
