--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,4 +1,10 @@
 -------------------------------------------------------------------------------
+  Version 0.1.25 (2021-03-15)
+-------------------------------------------------------------------------------
+  * Changed live system detecting again
+  * Small fixes
+
+-------------------------------------------------------------------------------
   Version 0.1.24 (2021-03-13)
 -------------------------------------------------------------------------------
   * Changed live system detecting
