--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,4 +1,9 @@
 -------------------------------------------------------------------------------
+  Version 0.1.26 (2021-04-25)
+-------------------------------------------------------------------------------
+  * Added sk locale
+
+-------------------------------------------------------------------------------
   Version 0.1.25 (2021-03-15)
 -------------------------------------------------------------------------------
   * Changed live system detecting again
