--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,4 +1,10 @@
 -------------------------------------------------------------------------------
+  Version 0.1.27 (2022-07-11)
+-------------------------------------------------------------------------------
+  * Added es_ES locale
+  * Updated it locale
+
+-------------------------------------------------------------------------------
   Version 0.1.26 (2021-04-25)
 -------------------------------------------------------------------------------
   * Added sk locale
