--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,4 +1,9 @@
 -------------------------------------------------------------------------------
+  Version 0.1.28 (2023-02-13)
+-------------------------------------------------------------------------------
+  * Added uk_UA locale
+
+-------------------------------------------------------------------------------
   Version 0.1.27 (2022-07-11)
 -------------------------------------------------------------------------------
   * Added es_ES locale
