--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,4 +1,14 @@
 -------------------------------------------------------------------------------
+  Version 0.1.30 (2023-04-28)
+-------------------------------------------------------------------------------
+  * Removed spsu from config
+
+-------------------------------------------------------------------------------
+  Version 0.1.29 (2023-04-27)
+-------------------------------------------------------------------------------
+  * Use remsu instead of sparky-su to get password
+
+-------------------------------------------------------------------------------
   Version 0.1.28 (2023-02-13)
 -------------------------------------------------------------------------------
   * Added uk_UA locale
