--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,12 +1,7 @@
 -------------------------------------------------------------------------------
-  Version 0.1.30 (2023-04-28)
+  Version 0.1.32 (2023-10-08)
 -------------------------------------------------------------------------------
-  * Removed spsu from config
-
--------------------------------------------------------------------------------
-  Version 0.1.29 (2023-04-27)
--------------------------------------------------------------------------------
-  * Use remsu instead of sparky-su to get password
+  * updated hu locale
 
 -------------------------------------------------------------------------------
   Version 0.1.28 (2023-02-13)
