--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,4 +1,9 @@
 -------------------------------------------------------------------------------
+  Version 0.1.33 (2024-05-04)
+-------------------------------------------------------------------------------
+  * updated es_AR locale
+
+-------------------------------------------------------------------------------
   Version 0.1.32 (2023-10-08)
 -------------------------------------------------------------------------------
   * updated hu locale
