--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,4 +1,9 @@
 -------------------------------------------------------------------------------
+  Version 0.1.34 (2024-08-22)
+-------------------------------------------------------------------------------
+  * Added fi locale
+
+-------------------------------------------------------------------------------
   Version 0.1.33 (2024-05-04)
 -------------------------------------------------------------------------------
   * updated es_AR locale
