--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,4 +1,9 @@
 -------------------------------------------------------------------------------
+  Version 0.1.35 (2025-06-05)
+-------------------------------------------------------------------------------
+  * updated de locale
+
+-------------------------------------------------------------------------------
   Version 0.1.34 (2024-08-22)
 -------------------------------------------------------------------------------
   * Added fi locale
