--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,4 +1,9 @@
 -------------------------------------------------------------------------------
+  Version 0.1.36 (2025-06-15)
+-------------------------------------------------------------------------------
+  * updated de locale
+
+-------------------------------------------------------------------------------
   Version 0.1.35 (2025-06-05)
 -------------------------------------------------------------------------------
   * updated de locale
